ANSIBLE_POC/template_location/template.json
 { 
    "$schema": "http://schema.management.azure.com/schemas/2014-04-01-preview/deploymentTemplate.json", 
    "contentVersion": "1.0.0.0", 
    "parameters": { 
      "adminUsername": { 
        "type": "string", 
        "defaultValue": "azureuser", 
        "metadata": { 
          "description": "User name for the Virtual Machine." 
        } 
      }, 
      "sshKeyData": { 
        "type": "string", 
        "metadata": { 
          "description": "SSH rsa public key file as a string." 
        } 
      } 
    }, 
    "variables": { 
      "vmSize": "Standard_DS2_v2", 
      "vmName": "sshvm", 
      "ubuntuOSVersion": "16.04-LTS", 
      "uniqueDnsLabelPrefix": "[concat('store', uniquestring(resourceGroup().id))]", 
      "location": "[resourceGroup().location]", 
      "imagePublisher": "Canonical", 
      "imageOffer": "UbuntuServer", 
      "addressPrefix": "10.0.0.0/16", 
      "subnet1Name": "Subnet-1", 
      "subnet1Prefix": "10.0.0.0/24", 
      "nicName": "sshNIC", 
      "publicIPAddressName": "sshPublicIP", 
      "publicIPAddressType": "Static", 
      "virtualNetworkName": "sshVNET", 
      "networkSecurityGroupName": "networkSecurityGroup1", 
      "sshKeyPath": "[concat('/home/',parameters('adminUsername'),'/.ssh/authorized_keys')]", 
      "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]", 
      "subnet1Ref": "[concat(variables('vnetID'),'/subnets/',variables('subnet1Name'))]", 
      "apiVersion": "2015-06-15" 
    }, 
    "resources": [ 
      { 
        "apiVersion": "2015-06-15", 
        "type": "Microsoft.Network/networkSecurityGroups", 
        "name": "[variables('networkSecurityGroupName')]", 
        "location": "[variables('location')]", 
        "properties": { 
          "securityRules": [ 
            { 
              "name": "ssh_rule", 
              "properties": { 
                "description": "Locks inbound down to ssh default port 22.", 
                "protocol": "Tcp", 
                "sourcePortRange": "*", 
                "destinationPortRange": "22", 
                "sourceAddressPrefix": "*", 
                "destinationAddressPrefix": "*", 
                "access": "Allow", 
                "priority": 123, 
                "direction": "Inbound" 
              } 
            },
            {
               "name": "Sonar",
               "properties": {
                 "priority": 500,
                 "protocol": "TCP",
                 "access": "Allow",
                 "direction": "Inbound",
                 "sourceApplicationSecurityGroups": [],
                 "destinationApplicationSecurityGroups": [],
                 "sourceAddressPrefix": "*",
                 "sourcePortRange": "*",
                 "destinationAddressPrefix": "*",
                 "destinationPortRange": "9000"
               }
            },
             {
               "name": "Jenkins",
               "properties": {
                 "priority": 600,
                 "protocol": "TCP",
                 "access": "Allow",
                 "direction": "Inbound",
                 "sourceApplicationSecurityGroups": [],
                 "destinationApplicationSecurityGroups": [],
                 "sourceAddressPrefix": "*",
                 "sourcePortRange": "*",
                 "destinationAddressPrefix": "*",
                 "destinationPortRange": "8080"
               }
            },
             {
               "name": "Nexus",
               "properties": {
                 "priority": 700,
                 "protocol": "TCP",
                 "access": "Allow",
                 "direction": "Inbound",
                 "sourceApplicationSecurityGroups": [],
                 "destinationApplicationSecurityGroups": [],
                 "sourceAddressPrefix": "*",
                 "sourcePortRange": "*",
                 "destinationAddressPrefix": "*",
                 "destinationPortRange": "8081"
               }
             }

          ] 
        } 
      }, 
      { 
        "apiVersion": "2015-06-15", 
        "type": "Microsoft.Network/publicIPAddresses", 
        "name": "[variables('publicIPAddressName')]", 
        "location": "[variables('location')]", 
        "properties": { 
          "publicIPAllocationMethod": "[variables('publicIPAddressType')]", 
          "dnsSettings": { 
            "domainNameLabel": "[variables('uniqueDnsLabelPrefix')]" 
          } 
        } 
      }, 
      { 
        "apiVersion": "2015-06-15", 
        "type": "Microsoft.Network/virtualNetworks", 
        "name": "[variables('virtualNetworkName')]", 
        "location": "[variables('location')]", 
        "dependsOn": [ 
          "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]" 
        ], 
        "properties": { 
          "addressSpace": { 
            "addressPrefixes": [ 
              "[variables('addressPrefix')]" 
            ] 
          }, 
          "subnets": [ 
            { 
              "name": "[variables('subnet1Name')]", 
              "properties": { 
                "addressPrefix": "[variables('subnet1Prefix')]", 
                "networkSecurityGroup": { 
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]" 
                } 
              } 
            } 
          ] 
        } 
      }, 
      { 
        "apiVersion": "2015-06-15", 
        "type": "Microsoft.Network/networkInterfaces", 
        "name": "[variables('nicName')]", 
        "location": "[variables('location')]", 
        "dependsOn": [ 
          "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]", 
          "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]" 
        ], 
        "properties": { 
          "ipConfigurations": [ 
            { 
              "name": "ipconfig1", 
              "properties": { 
                "privateIPAllocationMethod": "Dynamic", 
                "publicIPAddress": { 
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]" 
                }, 
                "subnet": { 
                  "id": "[variables('subnet1Ref')]" 
                } 
              } 
            } 
          ] 
        } 
      }, 
      { 
        "apiVersion": "2016-04-30-preview", 
        "type": "Microsoft.Compute/virtualMachines", 
        "name": "[variables('vmName')]", 
        "location": "[variables('location')]", 
        "dependsOn": [ 
          "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]" 
        ], 
        "properties": { 
          "hardwareProfile": { 
            "vmSize": "[variables('vmSize')]" 
          }, 
          "osProfile": { 
            "computerName": "[variables('vmName')]", 
            "adminUsername": "[parameters('adminUsername')]", 
            "linuxConfiguration": { 
              "disablePasswordAuthentication": true, 
              "ssh": { 
                "publicKeys": [ 
                  { 
                    "path": "[variables('sshKeyPath')]", 
                    "keyData": "[parameters('sshKeyData')]" 
                  } 
                ] 
              } 
            } 
          }, 
         "storageProfile": { 
           "imageReference": { 
             "publisher": "[variables('imagePublisher')]", 
              "offer": "[variables('imageOffer')]", 
              "sku": "[variables('ubuntuOSVersion')]", 
              "version": "latest" 
           }, 
            "osDisk": { 
              "createOption": "FromImage" 
            } 
          }, 
          "networkProfile": { 
            "networkInterfaces": [ 
              { 
                "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]" 
              } 
            ] 
          } 
        } 
      } 
    ], 
    "outputs": { 
      "sshCommand": { 
        "type": "string", 
        "value": "[concat('ssh ', parameters('adminUsername'), '@', variables('uniqueDnsLabelPrefix'), '.', resourceGroup().location, '.cloudapp.azure.com')]" 
      },
         "ipaddress": {
              "type": "string",
              "value": "[reference(variables('publicIPAddressName')).ipAddress]"
            }
    }
}
